--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Contoh Tampilan dengan Input, Tombol, dan Label</title>
+	<title>Tugas TP KPL</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
